# rag-slm-system

./: .gitignore  README.md  README_init.md  pyproject.toml
examples/: quickstart.py
rag_slm_system/: __init__.py  agent.py  cli.py  config.py  pipeline.py
rag_slm_system/chunking/: __init__.py  base.py  code_chunker.py  factory.py  html_chunker.py  markdown_chunker.py  pdf_chunker.py  text_chunker.py
rag_slm_system/embeddings/: __init__.py  base.py  gemini_embedder.py  sentence_transformer.py
rag_slm_system/fine_tuning/: __init__.py  data_formatter.py  trainer.py
rag_slm_system/qa_generator/: __init__.py  base.py  gemini_qa_generator.py  template_qa_generator.py
rag_slm_system/retriever/: __init__.py  bm25_retriever.py  hybrid_retriever.py  rag_retriever.py  reranker.py
rag_slm_system/vectorstore/: __init__.py  base.py  faiss_store.py
tests/: test_chunking.py  test_hybrid_retriever.py  test_qa_generator.py
