[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-slm-system"
version = "0.1.0"
description = "RAG + SLM Fine-Tuning System with content-aware chunking, Gemini ADK integration, and QA pair generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "kailas11"},
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "pdfplumber>=0.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tiktoken>=0.5.0",
    "google-genai>=1.0.0",
    "google-adk>=0.3.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "datasets>=2.14.0",
    "peft>=0.6.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "torch>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
rag-slm = "rag_slm_system.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.setuptools.packages.find]
include = ["rag_slm_system*"]
